services/ui-src/src/index.scss
$font-path: "~@cmsgov/design-system/dist/fonts";
$image-path: "~@cmsgov/design-system/dist/images";
$input-border-radius: 3px;
$color-primary-alt-lightest: #f0fafe;
@import "@cmsgov/design-system/dist/scss/index";
@import "~bootstrap/dist/css/bootstrap.min.css";

@mixin gradient-top-border {
  background: linear-gradient(
    90.11deg,
    $color-primary 49.91%,
    $color-primary-alt 66.06%
  );
  border-radius: 3px 3px 0px 0px;
  height: 8px;
}

@mixin max-width-ultra-wide {
  max-width: $width-lg;
}

// Expansion for the CMS Review component
// styled to look like a read only textbox
@mixin cms-review-read-only-textbox-body {
  background-color: $color-gray-lighter;
  width: 460px;
  padding: 8px;
  border-radius: 3px;
}

@mixin custom-table {
  @extend .ds-c-table;
  @extend .ds-c-table--borderless;
  @include max-width-ultra-wide;
  width: 100%;
  color: $color-gray;
  font-family: Open Sans;
  font-style: normal;
  font-size: 14px;
  line-height: 20px;

  th {
    border-color: $color-gray-lightest;
    background-color: $color-white;
    color: $color-black;
    font-weight: 600;
    padding-left: 0px;
    padding-top: 0px;
    padding-right: 0px;
    padding-bottom: 20px;
    text-align: left;
    user-select: none;
  }

  td {
    border-color: $color-gray-lightest;
    color: $color-base;
    font-weight: 400;
    padding-left: 0px;
    padding-top: 20px;
    padding-right: 0px;
    padding-bottom: 20px;
    text-align: left;
  }

  a {
    font-weight: bold;
  }

  .type-badge {
    @extend .ds-c-badge;
    font-weight: 600;
    background-color: $color-primary-alt-lightest;
    color: $color-gray;
  }
}

#root {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  .header-and-content {
    flex: 1 0 auto;
    @extend .ds-u-display--flex;
    @extend .ds-u-flex-direction--column;
  }

  > footer {
    flex-shrink: 0;
  }
}

.faq-table {
  table,
  th,
  td {
    border: 1px solid $color-black;
  }

  td {
    padding: 5px;
  }

  col {
    width: 400px;
  }

  th {
    text-align: center;
  }
}
body {
  @extend .ds-base;
}

h1 {
  @extend .ds-h1;
}

h2 {
  @extend .ds-h2;
}

h3 {
  @extend .ds-h3;
}

h4 {
  @extend .ds-h4;
}

legend {
  border-bottom-style: none !important;
}
.white-text {
  color: $color-white;
  @extend .white-link;
}

.white-link {
  a {
    color: $color-white;
    &:hover {
      color: $color-gray-lighter;
    }
  }
}

select,
.field {
  @extend .ds-c-field;
  border-color: $color-gray-light;
}

label {
  @extend .ds-c-label;
}

.no-bottom-padding {
  padding-bottom: 0;
}

.field-hint,
p.field-hint {
  @extend .ds-c-field__hint;
  width: 100%;
  margin: 0;
}
.field-hint-major {
  @extend .field-hint;
  @extend .ds-u-font-style--italic;
}
.field-error-message {
  @extend .ds-c-field__hint;
  color: $color-red;
}
.dashboard-white {
  background-color: $color-white;
  flex: 1;
  @extend .ds-u-display--flex;
  @extend .ds-u-flex-direction--column;
}
.app-bar {
  @extend .ds-l-row;
  @extend .ds-u-padding-top--1;
  @extend .ds-u-padding-bottom--1;
  @extend .ds-u-margin-left--0;
  @extend .ds-u-margin-right--0;
}

.page-title-bar {
  @extend .app-bar;
  @extend .ds-u-display--flex;
  @extend .ds-u-justify-content--between;
  @extend .ds-u-align-items--center;
  @extend .ds-u-padding-top--2;
  @extend .ds-u-padding-bottom--2;
  min-height: 7rem;

  h1 {
    @extend .ds-h2;
    margin: 0;
  }

  .title-bar-left-content {
    @extend .ds-u-display--flex;
    @extend .ds-u-flex-direction--row;
    @extend .ds-u-align-items--center;
    flex-direction: row;
  }

  &.title-bar-dark-theme {
    background-color: $color-primary-darker;
    color: $color-white;
  }

  &.title-bar-light-theme {
    background-color: $color-primary-alt-lightest;
    color: $color-base;
    .title-bar-back-button {
      background-color: $color-primary-alt-lightest;
      color: $color-primary;
      padding: 0 2.4rem 0 0;
      font-size: 2.4rem;
      &:hover {
        text-decoration: none;
        color: $color-primary-darker;
      }
    }
  }
}

.mini-dashboard-title {
  @extend .ds-u-padding-bottom--5;
  @extend .ds-u-display--flex;
  @extend .ds-u-justify-content--between;
}

.new-submission-button {
  background-color: transparent;
  white-space: nowrap;
  &:hover {
    text-decoration: none;
  }
}

ul {
  @extend .ds-c-list;
}

.ds-u-padding--8 {
  padding-left: 70px !important;
  padding-right: 70px !important;
}
/* ... */

